--- a/obrigado.html
+++ b/obrigado.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="obrigado">
-    <h2 class="tigre">Informações enviadas</h2>
+    <h2 class="tigre"><a href="index.html">Informações enviadas</a></h2>
   </body>
 </html>
